# win-launcher

./: .gitignore  Cargo.toml  README.md  tauri.conf.json
src/: main.rs  search.rs  window_manager.rs
