[package]
name = "win-launcher"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fuzzy-matcher = "0.3"
winapi = { version = "0.3", features = ["winuser", "winnt", "libloaderapi"] }
dirs = "5.0"
toml = "0.8"
notify = "6.1"
once_cell = "1.19"
log = "0.4"
env_logger = "0.11"